@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-10T02:03:02Z",
-  "count" : 3,
+  "timestamp" : "2022-06-23T08:30:20Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
