@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-23T02:02:47Z",
+  "timestamp" : "2022-06-23T08:30:20Z",
   "count_outdated" : 625,
   "uniques_outdated" : 323,
-  "count" : 650,
+  "count" : 649,
   "uniques" : 337,
   "clones" : [
     {
       "timestamp": "2022-06-09T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
